--- a/Flappy.csproj
+++ b/Flappy.csproj
@@ -34,6 +34,7 @@
     <Reference Include="OpenTK">
       <HintPath>OpenTK.dll</HintPath>
     </Reference>
+    <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
@@ -43,28 +44,12 @@
     <Compile Include="Game.cs" />
     <Compile Include="Renderer.cs" />
     <Compile Include="Shader.cs" />
+    <Compile Include="Fonter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <None Include="OpenTK.dll.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\flappy\Assets\shader.frag" />
-    <None Include="..\flappy\Assets\shader.vert" />
-    <None Include="..\flappy\Assets\unlit.frag" />
-    <None Include="..\flappy\Assets\unlit.vert" />
-    <None Include="..\flappy\Assets2\unlit.frag" />
-    <None Include="..\flappy\Assets2\unlit.vert" />
-    <None Include="..\flappy\Resources\badmove.wav" />
-    <None Include="..\flappy\Resources\.DS_Store" />
-    <None Include="..\flappy\Resources\blocks.png" />
-    <None Include="..\flappy\Resources\failed.wav" />
-    <None Include="..\flappy\Resources\font.fnt" />
-    <None Include="..\flappy\Resources\font.png" />
-    <None Include="..\flappy\Resources\puff.png" />
-    <None Include="..\flappy\Resources\shader.frag" />
-    <None Include="..\flappy\Resources\shader.vert" />
-    <None Include="..\flappy\unlitcolor.frag" />
-    <None Include="..\flappy\unlitcolor.vert" />
   </ItemGroup>
 </Project>
